# livraria-curso-django

./: db.sqlite3  pyproject.toml
core/: models.py
core/migrations/: 0001_initial.py  0002_itenscompra.py
livraria/: settings.py
static/: staticfiles.json
