[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Felipe Sampaio <felipe.sampaio@farroupilha.ifrs.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
